--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,5 +1,7 @@
 body {
   background-color: #7d736a;
+  background-image: url('../public/images/background.jpg');
+  background-size: 100%;
   height:100%;
 }
 nav {
