--- a/client/src/Navbar.scss
+++ b/client/src/Navbar.scss
@@ -2,10 +2,10 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 3%;
   height: 150px;
-  width: 94%;
-  background-color: #3E2712;
+  width: 100%;
+  background-color: rgba(62, 39, 18, 0.45);
+
 
   h1 {
     font-size: 100px;
