--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,5 +1,6 @@
 @import './styles/variables.scss';
 @import './styles/reset.scss';
+@import "~bootstrap/scss/bootstrap";
 
 body {
   background-color: #7d736a;
