--- a/client/src/components/HomePage/HomePageComponents/NavCard.scss
+++ b/client/src/components/HomePage/HomePageComponents/NavCard.scss
@@ -1,13 +1,11 @@
 @import "../../../styles/mixins.scss";
 @import "../../../styles/variables.scss";
 
-.div__carousel{
-  width: 100%;
-  height: 150px;
+.nav__card {
+  padding: 20px;
   background-color: $dark-background;
-}
-
-.test_pic {
-  width: auto;
-  height: 150px;
+  min-width: 25%;
+  max-width: 25%;
+  min-height: 25%;
+  max-height: 25%;
 }
