--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,3 +1,6 @@
+@import './styles/mixins.scss';
+@import './styles/reset.scss';
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
