--- a/client/src/components/ProductList.scss
+++ b/client/src/components/ProductList.scss
@@ -1,3 +1,11 @@
 @import "../styles/mixins.scss";
 @import "../styles/variables.scss";
 
+.products_page{
+  display: flex;
+  width: 100%;
+  max-width: 1500px;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  justify-content: center;
+}
