--- a/client/src/components/ProductListItem.scss
+++ b/client/src/components/ProductListItem.scss
@@ -9,20 +9,33 @@
   border-radius: 25px;
   background-color: $dark-background;
   padding: 10px;
-  margin: 10px;
+  margin: auto;
   max-width: 30%;
   min-width: 30%;
+  min-height: 500px;
+  max-height: 500px;
   align-items: center;
   justify-content: space-between;
   font-size: 25px;
 
-  .div__product-info {
+  img {
+    width: 400px;
+    border-radius: 20px;
+  }
 
+  .div__product-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .div__product-item {
+    display: flex;
+    justify-content: space-between;
   }
 
   .product-name {
     font-size: 30px;
-    width: 50%;
   }
 
   .product-price {}
