--- a/client/src/components/ProductListItem.scss
+++ b/client/src/components/ProductListItem.scss
@@ -38,9 +38,15 @@
     font-size: 30px;
   }
 
-  .product-price {}
+  .product-price {
+    font-size: 25px;
+  }
 
-  .product-size {}
+  .product-size {
+    font-size: 25px;
+  }
 
-  .product-category {}
+  .product-category {
+    font-size: 25px;
+  }
 }
