--- a/client/src/Navbar.scss
+++ b/client/src/Navbar.scss
@@ -18,6 +18,29 @@ nav {
   button {
     font-size: 20px;
     color: rgba(55, 50, 45);
-    background-color: #7d736a;
+    background-color: #fcf2e9;
   }
+}
+
+.dropdown {
+  position: relative;
+}
+
+.account {
+  position: absolute;
+  width: 150px
+}
+
+.account>li>button {
+  width: 100%;
+  height: 100%;
+  text-align: left;
+
+  // background: none;
+  color: inherit;
+  border: none;
+  padding: 5px;
+  margin: 0;
+  font: inherit;
+  cursor: pointer;
 }
