--- a/client/src/Navbar.scss
+++ b/client/src/Navbar.scss
@@ -1,25 +1,45 @@
 @import './styles/variables.scss';
 @import './styles/reset.scss';
+@import url('https://fonts.googleapis.com/css2?family=Covered+By+Your+Grace&family=Source+Sans+Pro:ital,wght@0,300;0,600;1,300;1,600&display=swap');
 
 nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 100px;
+  height: 200px;
   width: 100%;
-  background-color: rgba(62, 39, 18, 0.45);
+  background-image: url('../public/images/navbackground.jpg');
 
 
   h1 {
     font-size: 100px;
-    color: #7d736a
+    font-family: 'Covered By Your Grace', cursive;
+    color: #63452a;
+    background-color: rgba(252, 242, 233, 0.75);
+    padding: 20px 20px;
+    margin-left: 20px;
+    border-radius: 20px;
+  }
+
+  .nav_buttons {
+    display: flex;
+    align-items: flex-end;
   }
 
   button {
     font-size: 20px;
-    color: rgba(55, 50, 45);
+    font-weight: bold;
+    color: #63452a;
     background-color: #fcf2e9;
+    border-radius: 2em;
+    padding: 10px 20px;
+    margin: 10px;
   }
+}
+
+button:hover {
+  color: #fcf2e9;
+  background-color: #63452a;
 }
 
 .dropdown {
@@ -35,8 +55,6 @@ nav {
   width: 100%;
   height: 100%;
   text-align: left;
-
-  // background: none;
   color: inherit;
   border: none;
   padding: 5px;
