--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -3,8 +3,8 @@
 @import "~bootstrap/scss/bootstrap";
 
 body {
-  background-color: #7d736a;
-  background-image: url('../public/images/newbackground.jpg');
+  background-color: white;
+  // background-image: url('../public/images/newbackground.jpg');
   background-size: 100%;
   height: 100%;
   color: $body-text;
