changed colour scheme

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -3,7 +3,7 @@
 @import "~bootstrap/scss/bootstrap";
 
 body {
-  background-color: white;
+  background-color: black;
   // background-image: url('../public/images/newbackground.jpg');
   background-size: 100%;
   height: 100%;
