--- a/client/src/Navbar.scss
+++ b/client/src/Navbar.scss
@@ -8,7 +8,7 @@ nav {
   align-items: center;
   height: 200px;
   width: 100%;
-  background-color: white;
+  background-color: black;
 }
 
 
@@ -39,7 +39,7 @@ nav {
 button {
   font-size: 20px;
   font-weight: bold;
-  color: #63452a;
+  color: #007435;
   background-color: #fcf2e9;
   border-radius: 2em;
   padding: 10px 20px;
@@ -49,7 +49,7 @@ button {
 
 button:hover {
   color: #fcf2e9;
-  background-color: #63452a;
+  background-color: #007435;
 }
 
 .dropdown {
@@ -73,10 +73,25 @@ button:hover {
   cursor: pointer;
 }
 
+.account>li>button:hover {
+  color: #fcf2e9;
+  background-color: #007435;
+}
+
 img {
   width: 50%;
   height: 50px;
   object-fit: cover;
 }
 
-.nav_buttons {}
+.nav__buttons {
+  padding: 50px;
+  border-radius: 20px
+}
+
+.nav_buttons:hover {
+  padding: 50px;
+  background-image: url('../public/images/navbackground.jpg');
+  border-radius: 20px;
+  margin-right: 10px
+}
