--- a/client/src/pages/Landing/Landing.scss
+++ b/client/src/pages/Landing/Landing.scss
@@ -4,44 +4,61 @@
 
 .column {
   overflow: y;
-  height: 75vw
 }
 
 .landing__page {
   display: flex;
   margin: 0;
-  padding: 0;
+  padding: 50;
   flex-direction: column;
   position: absolute;
-  // background-image: url('../../../public/images/navbackground.jpg');
-  // background-repeat: no-repeat;
-  // background-size: cover;
+  background-image: url('../../../public/images/navbackground.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
   background-color: pink;
   height: 50vw;
   width: 100vw;
 }
 
-#title {
+.title__andbuttons {
   display: flex;
-  font-family: 'Fjalla One';
-  font-size: 500px;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: green;
+}
 
+#title {
+  font-family: 'Fjalla One';
+  font-size: 600px;
+  font-weight: bold;
+  padding-top: 150px;
+  color: rgb(252, 236, 216);
+}
+
+#visit {
+  display: flex;
+  margin: 100px 100px;
 }
 
 .arrow {
   background-color: blue;
+  margin: 200px;
 }
 
 .row__login {
   // background-image: url('../../../public/images/planksbackground.jpg')
   background-color: yellow;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
 }
 
 .login {
-  height: 300px;
-  width: 200px;
-  background-color: white
+  height: 500px;
+  width: 500px;
+  background-color: white;
+  margin: 50px;
+  padding: 20px;
+  border-radius: 25px
 }
