--- a/client/src/pages/Landing/Landing.scss
+++ b/client/src/pages/Landing/Landing.scss
@@ -11,7 +11,6 @@
   justify-content: flex-end;
   align-items: center;
   margin: 0;
-  // padding: 50;
   position: absolute;
   background-image: url('../../../public/images/landing.jpg');
   background-repeat: no-repeat;
@@ -26,7 +25,7 @@
   flex-direction: column;
   align-items: center;
   margin-right: 150px;
-  margin-bottom: 600px;
+  margin-bottom: 400px;
   justify-content: center;
 }
 
@@ -46,17 +45,24 @@
 }
 
 .landing__buttons {
-  // display: flex;
-  // flex-direction: row;
-  // justify-content: flex-end;
-  // padding-right: 400px;
-  margin-top: 75px;
-  font-size: 40px;
+  margin-left: 20px;
+  margin-right: 20px;
+
+}
+
+.landing__buttons button {
+  margin: 75px 20px 0 20px;
+  padding: 15px 30px 15px 30px;
+  font-size: 35px;
   font-weight: bold;
-  color: #007435;
+  color: #50350e;
+  border: none;
   background-color: #fcf2e9;
-  border-radius: 2em;
-  // padding: 10px 20px;
-  // margin: 10px;
+  border-radius: 25px;
+}
+
+.landing__buttons button:hover {
+  color: #fcf2e9;
+  background-color: #50350e;
 
 }
