farmer login setup

--- a/client/src/Navbar.scss
+++ b/client/src/Navbar.scss
@@ -79,7 +79,7 @@ button:hover {
   background-color: #007435;
 }
 
-img {
+.footer__line img {
   width: 50%;
   height: 30px;
   object-fit: cover;
