--- a/client/src/pages/FarmerLogin/FarmerLogin.scss
+++ b/client/src/pages/FarmerLogin/FarmerLogin.scss
@@ -1,33 +1,68 @@
+@import '../../styles/variables.scss';
+@import '../../styles/reset.scss';
+@import url('https://fonts.googleapis.com/css2?family=Covered+By+Your+Grace&family=Fjalla+One&family=Source+Sans+Pro:ital,wght@0,300;0,600;1,300;1,600&family=Titan+One&display=swap');
+
 .row__login {
-  // background-image: url('../../../public/images/planksbackground.jpg')
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 
 }
 
+.images {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.images img {
+  height: 300px;
+  width: 300px;
+}
+
 label {
   font-family: 'Fjalla One';
-  font-size: 20px;
+  font-size: 30px;
 }
 
 input {
   width: 100%;
+  height: 40px;
   margin: 8px 0;
+  background-color: #fcf2e9;
+  border-radius: 10px;
 }
 
 .login p {
   display: flex;
   justify-content: center;
   font-family: 'Fjalla One';
-  font-size: 30px;
+  font-size: 50px;
 }
 
 .login {
-  height: 500px;
-  width: 500px;
-  background-color: white;
-  margin: 50px;
+  height: 650px;
+  min-width: 500px;
+  background-color: #fcf2e9;
+  margin: 20px;
   padding: 20px;
   border-radius: 25px
+}
+
+.login__button button {
+  width: 500px;
+  height: 60px;
+  font-size: 50px;
+  font-weight: bold;
+  color: #50350e;
+  background-color: #fcf2e9;
+  border-radius: 15px;
+  margin: 10px;
+}
+
+.login__button button:hover {
+  color: #fcf2e9;
+  background-color: #50350e;
 }
