--- a/client/src/Navbar.scss
+++ b/client/src/Navbar.scss
@@ -8,7 +8,8 @@ nav {
   align-items: center;
   height: 200px;
   width: 100%;
-  background-color: black;
+  background-color: $dark-background;
+  //background-image: url('../public/images/navbackground.jpg');
 }
 
 
@@ -17,9 +18,9 @@ nav {
   font-family: 'Titan One', cursive;
   -webkit-background-clip: text;
   background-clip: text;
-  background-image: url('../public/images/navbackground.jpg');
+  background-color: $body-text;
+  // background-image: url('../public/images/navbackground.jpg');
   color: transparent;
-  background-color: rgba(252, 242, 233, 0.75);
   padding: 5px 20px;
   margin-left: 20px;
   border-radius: 20px;
