--- a/client/src/Navbar.scss
+++ b/client/src/Navbar.scss
@@ -8,7 +8,8 @@ nav {
   align-items: center;
   height: 200px;
   width: 100%;
-  background-image: url('../public/images/planksbackground.jpg')
+  // background-image: url('../public/images/planksbackground.jpg')
+  background-color: black;
 }
 
 
@@ -35,20 +36,40 @@ nav {
 .nav_buttons {
   display: flex;
   align-items: flex-end;
+  font-family: 'Fjalla One';
 }
 
 .nav_buttons button {
-  font-size: 20px;
+  font-size: 30px;
   font-weight: bold;
-  color: #007435;
+  color: black;
   background-color: #fcf2e9;
   border-radius: 2em;
   padding: 10px 20px;
   margin: 10px;
 }
 
+.login__nav {
+  display: flex;
+  align-items: center;
+  font-size: 20px
+}
 
-button:hover {
+.login__component {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: lime;
+  margin: 0 25px;
+  padding: 10px;
+  border-radius: 30px;
+}
+
+.login__input {
+  border-radius: 20px;
+}
+
+.nav_buttons button:hover {
   color: #fcf2e9;
   background-color: #007435;
 }
