--- a/client/src/pages/FarmerLogin/FarmerLogin.scss
+++ b/client/src/pages/FarmerLogin/FarmerLogin.scss
@@ -7,7 +7,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
 }
 
 .images {
@@ -22,12 +21,17 @@
   width: 300px;
 }
 
-label {
+.farmer__login {
+  display: flex;
+  flex-direction: column;
+}
+
+.farmer__label {
   font-family: 'Fjalla One';
   font-size: 30px;
 }
 
-input {
+.farmer__input {
   width: 100%;
   height: 40px;
   margin: 8px 0;
