--- a/client/src/pages/FarmerLogin/FarmerLogin.scss
+++ b/client/src/pages/FarmerLogin/FarmerLogin.scss
@@ -47,7 +47,7 @@
 }
 
 .login {
-  height: 650px;
+  height: 700px;
   min-width: 500px;
   background-color: #fcf2e9;
   margin: 20px;
@@ -55,10 +55,12 @@
   border-radius: 25px
 }
 
-.login__button button {
+.submit__button {
+  display: flex;
+  justify-content: center;
   width: 500px;
-  height: 60px;
-  font-size: 50px;
+  height: 50px;
+  font-size: 30px;
   font-weight: bold;
   color: #50350e;
   background-color: #fcf2e9;
@@ -66,7 +68,7 @@
   margin: 10px;
 }
 
-.login__button button:hover {
+.submit__button:hover {
   color: #fcf2e9;
   background-color: #50350e;
 }
