--- a/client/src/CartDrawer.scss
+++ b/client/src/CartDrawer.scss
@@ -1,8 +1,19 @@
 .cart__container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   height: 100vh;
   background: white;
   box-shadow: 2px 0 5px rgba(0, 0, 0, 0.5);
   position: fixed;
   width: 400px;
+  z-index: 200;
   right: 0;
+  transform: translateX(0);
+  transition: transform 0.3s ease-in;
+}
+
+.cart__container.open {
+  transform: translateX(100%);
+
 }
