add rough styling to visualize state change

--- a/client/src/components/FarmList.scss
+++ b/client/src/components/FarmList.scss
@@ -1,7 +1,7 @@
 @import "../styles/mixins.scss";
 @import "../styles/variables.scss";
 
-.farm-list {
+.farms-list {
   display:flex;
   justify-content: space-between;
   color:white;
