update farmlist and farmlistitem to use logic for show/hide farms

--- a/client/src/components/FarmListItem.scss
+++ b/client/src/components/FarmListItem.scss
@@ -12,27 +12,28 @@
         object-fit: contain;
       }
 
-
       &:hover {
-        background-color: #ee5253;
+        background-color: $dark-background;
         cursor: pointer;
         color: $dark-background;
       }
     }
 
     &--selected {
-      @include fade;
-      width: auto;
-      height: 120px;
-      aspect-ratio: 3/2;
-      object-fit: contain;
+      .farm-list__img {
+        @include fade;
+        width: auto;
+        height: 120px;
+        aspect-ratio: 3/2;
+        object-fit: contain;
+      }
+
 
       &:hover {
-        background-color: darken($white, 5%);
+        background-color: $dark-background;
+        cursor: pointer;
+        color: $dark-background;
       }
     }
   }
-
-
-
 }
