--- a/client/src/CartDrawer.scss
+++ b/client/src/CartDrawer.scss
@@ -2,11 +2,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100vh;
+  height: 100%;
   background: white;
   box-shadow: 2px 0 5px rgba(0, 0, 0, 0.5);
   position: fixed;
   width: 400px;
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
   z-index: 200;
   right: 0;
   transform: translateX(0);
