--- a/client/src/components/FarmList.scss
+++ b/client/src/components/FarmList.scss
@@ -3,9 +3,11 @@
 
 .farms-list {
   display:flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   color:white;
   font-weight: 15px;
   width: 100%;
   padding: 10px 0;
+  margin: 10px;
+  
 }
