--- a/client/src/components/ProductListItem.scss
+++ b/client/src/components/ProductListItem.scss
@@ -19,6 +19,7 @@
   font-size: 25px;
   color: rgb(33, 20, 4);
   font-family: $font-family-fancy;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
   .title__logo {
     width: 90%;
