--- a/client/src/pages/HomePage/HomePageComponents/CategoryList.scss
+++ b/client/src/pages/HomePage/HomePageComponents/CategoryList.scss
@@ -7,7 +7,7 @@
   flex-direction: column;
   justify-content: space-evenly;
   position: absolute;
-  padding-top:120px;
+  padding-top: 200px;
   margin: 25px;
-  
+  flex-wrap: wrap;
 }
