--- a/client/src/pages/About/About.scss
+++ b/client/src/pages/About/About.scss
@@ -4,7 +4,7 @@
 .about__article {
   display: flex;
   max-width: 50%;
-  align-self: flex-start;
+  align-self: center;
   flex-flow: column;
   padding: 25px;
   overflow-x: wrap;
@@ -16,10 +16,16 @@
 }
 
 p {
-  font-size: 30px;
+  font-size: 1.5vw
 }
 
 h2 {
   margin: 0;
-  font-size: 75px;
+  font-size: 5.5vw;
+}
+.about_body {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+
 }
