--- a/client/src/CartDrawer.scss
+++ b/client/src/CartDrawer.scss
@@ -29,12 +29,13 @@
 }
 
 .modal {
-  position: fixed;
   top: 50%;
   left: 50%;
+  width: 100%;
+  height: 100%;
   // transform: translate(-50%, -50%)
   border: 1px solid black;
   border-radius: 10px;
   background-color: red;
-  z-index: 10
+  z-index: 10000
 }
