add photo and styles to about us page

--- a/client/src/pages/About/About.scss
+++ b/client/src/pages/About/About.scss
@@ -5,6 +5,7 @@
   background-image: url("../../../public/images/background.jpg");
   display: flex;
   align-content:flex-start;
+  flex-flow: column;
   
 
 }
@@ -16,11 +17,22 @@
   overflow-x: wrap;
   border-radius: 25px;
   background-color: $dark-background;
-
-
+  padding: 50px;
+  margin: 4vw;
   color: $body-text;
 }
-
+.user-photos {
+ display: flex;
+ justify-content: start;
+}
+img {
+  border: 1px solid #ddd; /* Gray border */
+  border-radius: 4px;  /* Rounded border */
+  padding: 5px; /* Some padding */
+  width: 150px; /* Set a small width */
+  margin: 50px;
+  margin-top: 10px;
+}
 p {
   font-size: 1.5vw
 }
