add line breaks to mission statement

--- a/client/src/pages/About/About.scss
+++ b/client/src/pages/About/About.scss
@@ -16,10 +16,11 @@
   padding: 25px;
   overflow-x: wrap;
   border-radius: 25px;
-  background-color: $dark-background;
+  background-color: darkgrey;
   padding: 50px;
   margin: 4vw;
   color: $body-text;
+  
 }
 .user-photos {
  display: flex;
