--- a/client/src/components/Checkout.scss
+++ b/client/src/components/Checkout.scss
@@ -12,13 +12,20 @@
 
 .checkout__container {
   margin-top: 100px;
-  width: 500px;
-  height: 500px;
+  width: 900px;
+  height: 600px;
   border-radius: 20px;
   background-color: white;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   padding: 20px
+}
+
+.checkout__items {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .checkout__header {
@@ -29,4 +36,21 @@
 .checkout__body {
   display: flex;
 
+}
+
+.checkout__orderinfo__left {
+  display: flex;
+  width: 600px;
+  flex-direction: space-between;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding-right: 20px
+}
+
+
+.checkout__footer {
+  display: flex;
+  justify-content: center;
+  padding-top: 40px
 }
