add logos with different formats, adjust divs and styling

--- a/client/src/CartDrawer.scss
+++ b/client/src/CartDrawer.scss
@@ -7,7 +7,7 @@
   box-shadow: 2px 0 5px rgba(0, 0, 0, 0.5);
   position: fixed;
   width: 400px;
-  overflow-y: auto;
+  overflow-y: show;
   -webkit-overflow-scrolling: touch;
   z-index: 200;
   right: 0;
