--- a/client/src/pages/Landing/Landing.scss
+++ b/client/src/pages/Landing/Landing.scss
@@ -8,60 +8,57 @@
 
 .landing__page {
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
   margin: 0;
+  top: 0;
   position: absolute;
+  // background-color: $dark-background;
   background-image: url('../../../public/images/landing.jpg');
   background-repeat: no-repeat;
   background-size: cover;
-  height: 50vw;
-  width: 100vw;
-}
+  height: 100%;
 
-.title__andbuttons {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-right: 150px;
-  margin-bottom: 400px;
-  justify-content: center;
-}
+  .split-screen {
+    display: flex;
+    flex-direction:column;
+    align-items: center;
+    justify-content: center;
+    height:100%;
+    width: 50%;
+  }
 
-.title__andbuttons p {
-  font-weight: bold;
-  color: rgb(252, 236, 216)
-}
+  #main {
+    width: 85%;
+    border-radius: 5px;
+    padding-bottom: 5%;
+  }
 
-#main {
-  font-family: 'Fjalla One';
-  font-size: 300px;
-  font-weight: bold;
-  // padding: 50px 150px -100px 50px;
-  // margin-right: 150px;
-  color: rgb(252, 236, 216);
-  line-height: 0.9;
-}
+  #landing-icon {
+    width: 5%;
+    height: auto;
+  }
 
-.landing__buttons {
-  margin-left: 20px;
-  margin-right: 20px;
 
-}
+  .landing__buttons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 10%;
 
-.landing__buttons button {
-  margin: 75px 20px 0 20px;
-  padding: 15px 30px 15px 30px;
-  font-size: 35px;
-  font-weight: bold;
-  color: #50350e;
-  border: none;
-  background-color: #fcf2e9;
-  border-radius: 25px;
-}
+    button {
+      font-size: 30px;
+      background: rgba(255, 255, 255, 0.297);
+      color: $medium-brown;
+      border-color: $medium-brown;
+      border-radius: 5px;
+      margin: 10px;
+    }
 
-.landing__buttons button:hover {
-  color: #fcf2e9;
-  background-color: #50350e;
+    .landing__buttons button:hover {
+      color: #fcf2e9;
+      background-color: #50350e;
 
+    }
+  }
 }
