add hover effect to nav bar

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -29,7 +29,8 @@ body {
   }
 
   .site-body {
-    display: block;
+    display: relative;
+    overflow:hidden;
     top: 100px;
     height: 100%;
   }
