--- a/client/src/Navbar.scss
+++ b/client/src/Navbar.scss
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Covered+By+Your+Grace&family=Fjalla+One&family=Source+Sans+Pro:ital,wght@0,300;0,600;1,300;1,600&family=Titan+One&display=swap');
 
 .nav__main-site {
-
+  position: fixed;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -44,7 +44,6 @@
     margin: 0 25px;
     padding: 10px;
     border-radius: 30px;
-    overflow-y: visible;
     -webkit-overflow-scrolling: touch;
     z-index: 1000;
     // top: 0;
@@ -100,7 +99,7 @@
     width: 100%;
     height: 100%;
     text-align: left;
-    color: inherit;
+    color: $dark-brown;
     border: none;
     padding: 5px;
     margin: 0;
@@ -109,8 +108,10 @@
   }
 
   .account>li>button:hover {
-    color: #fcf2e9;
-    background-color: #007435;
+    color: $medium-brown;
   }
 
+}
+.nav__main-site:hover {
+  background-color: $light-brown;
 }
