create 2 landing page views

--- a/client/src/pages/About/About.scss
+++ b/client/src/pages/About/About.scss
@@ -2,7 +2,7 @@
 @import '../../styles/reset.scss';
 
 .about_body {
-  background-image: url("../../../public/images/bgtest/farmer.jpg");
+  background-image: url('../../../public/images/bgtest/closeupveggies.jpg');
   background-attachment: fixed;
   background-size: cover;
   height: 100%;
