fixed farmer order functionality

--- a/client/src/farmers/FarmerOrders/FarmerOrderSummary.scss
+++ b/client/src/farmers/FarmerOrders/FarmerOrderSummary.scss
@@ -1,5 +1,3 @@
-
-
 .li__farmer-order-item {
   border: 2px solid;
   padding: 10px;
@@ -7,6 +5,7 @@
   font-size: 20px;
   color: white;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  background: black;
 
   .farmer-order-name {
     width: 100px;
@@ -22,15 +21,17 @@
 
   .farmer-order-button {
     font-size: 10px;
-    color:white;
+    color: white;
     border-radius: 30px;
     border: none;
     padding: 5px 10px;
     background-color: gray;
+
     p {
       font-size: 20px;
     }
   }
+
   .farmer-order-button:hover {
     color: lightgray;
     background-color: gray;
