add backgrounds to farm logos

--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -15,6 +15,6 @@ $body-text: #bf9a7c;
 // Color Palette
 $dark-brown: #4d331f;
 $medium-brown: #7C4E29;
-$light-brown: #E6B17E;
+$light-brown: #e9bc7b;
 
 $spacing: 2rem;
