--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -17,4 +17,10 @@ $dark-brown: #4d331f;
 $medium-brown: #7C4E29;
 $light-brown: #e9bc7b;
 
+// Color Palette Semi Opaque
+$dark-brown-semi: rgba(77, 51, 31, .5);
+$medium-brown-semi: rgba(124, 78, 41, 0.5);
+$light-brown-semi: rgba(233, 187, 123, 0.5);
+
+
 $spacing: 2rem;
