--- a/client/src/pages/About/About.scss
+++ b/client/src/pages/About/About.scss
@@ -19,15 +19,16 @@
     color: rgba(255, 255, 255, 0.3);
     max-width: 30%;
     margin: 150px 50px;
+  }
 
-    .about__article {
-
-      padding: 25px;
-      overflow-x: wrap;
-      border-radius: 25px;
-      padding: 50px;
-      margin: 4vw;
-    }
+  .about__article {
+    filter: blur(0);
+    padding: 25px;
+    color: $dark-brown;
+    overflow-x: wrap;
+    border-radius: 25px;
+    padding: 50px;
+    margin: 4vw;
   }
 
   .user-photos {
