--- a/client/src/pages/HomePage/Home.scss
+++ b/client/src/pages/HomePage/Home.scss
@@ -1,22 +1,26 @@
 @import '../../styles/variables.scss';
 @import '../../styles/reset.scss';
 
+.container__home {
+  display: flexbox;
+}
+
 .section__home {
-  position:absolute;
-  top:100px;
-  overflow-y: scroll;
+  top: 100px;
   font-size: 25px;
   width: 100%;
-  display:flex;
+  display: flex;
   flex-direction: column;
+
   .ul__home {
     width: 100%;
     display: flex;
     flex-direction: column;
+
     .li__home {
       display: flex;
       min-width: 100%;
-      
+
       justify-content: space-between;
       align-content: space-between;
       width: 100%;
