--- a/client/src/farmers/FarmerOrders/FarmerOrders.scss
+++ b/client/src/farmers/FarmerOrders/FarmerOrders.scss
@@ -1,11 +1,12 @@
 
 
 .farmer-orders {
-  color:white;
+  color:black;
   font-size: 25px;
   font-weight: 15px;
   padding: 10px 0;
   margin: auto;
+  margin-top: 50px;
   width: 60%;
   text-align: center;
 }
