--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -44,15 +44,13 @@ body {
   }
 
   .site-body {
-    display: fixed;
-    position: static;
-    top: 100px;
-    height: 100%;
-    background: inherit;
-  }
-
-  .section__app {
-    padding: 1% 3%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    position: absolute;
+    height: 100vh;
+    width: 100vw;
     background: inherit;
   }
 }
