styling cart drawer

--- a/client/src/CartDrawer.scss
+++ b/client/src/CartDrawer.scss
@@ -57,9 +57,8 @@
 }
 
 .minus-all {
-  background-color: grey;
-  font-weight: bold;
-  color: white;
+  background-color: transparent;
+  color: grey;
   border: none;
   border-radius: 10px;
 }
