create readme file, only adding screenshots left to do

--- a/client/src/pages/HomePage/HomePageComponents/CategoryListItem.scss
+++ b/client/src/pages/HomePage/HomePageComponents/CategoryListItem.scss
@@ -3,7 +3,9 @@
 @import "../../../styles/reset.scss";
 
 .category-list-item {
-  
+  color: black;
+  font-weight: 500;
+  font-size: 1.5vw;
   .category-icon {
     width: 100px;
     height: auto;
