--- a/client/src/pages/HomePage/HomePageComponents/CategoryList.scss
+++ b/client/src/pages/HomePage/HomePageComponents/CategoryList.scss
@@ -7,7 +7,7 @@
   flex-direction: column;
   justify-content: space-evenly;
   position: absolute;
-  padding-top: 200px;
-  margin: 25px;
+  margin-top: 200px;
+  padding: 30px;
   flex-wrap: wrap;
 }
