--- a/client/src/pages/About/About.scss
+++ b/client/src/pages/About/About.scss
@@ -6,36 +6,85 @@
   background-attachment: fixed;
   background-size: cover;
   height: 100%;
+  width: 100%;
   position: fixed;
   z-index: 0;
   top: 0;
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+
+  .split-in-2 {
+    width: 100%;
+    height: 50%;
+  }
 
   .blur-area {
-    background: inherit;
+    position: fixed;
     filter: blur(8px);
-    box-shadow: inset 0 0 0 220px;
-    color: rgba(255, 255, 255, 0.3);
-    max-width: 30%;
-    margin: 150px 50px;
+    background: inherit;
+    box-shadow: inset 0 0 0 440px;
+    border-radius: 20px;
+    color: rgba(255, 255, 255, 0.35);
+    width: 46%;
+    height: 80%;
+    margin: 140px 20px;
+    z-index: 0;
   }
 
   .about__article {
-    filter: blur(0);
-    padding: 25px;
+    position: fixed;
+    padding: 40px;
     color: $dark-brown;
     overflow-x: wrap;
-    border-radius: 25px;
-    padding: 50px;
-    margin: 4vw;
+    width: 45%;
+    height: 30%;
+    margin: 120px 20px;
+    z-index: 1;
+
+    h2 {
+      font-size: 30px;
+      padding: 10px 0;
+    }
+
+    p {
+      font-size: 20px;
+    }
   }
 
-  .user-photos {
+  .team-member {
+    z-index: 1;
     display: flex;
+    flex-flow: row;
+    align-content: flex-end;
     justify-content: flex-start;
-    width: 150px;
-    height: 150px;
+    height: 100%;
+    padding-left: 30px;
+    color: $dark-brown;
+
+    .user-profile {
+      display: flex;
+      flex-flow: column;
+      justify-content: flex-end;
+      align-items: flex-start;
+      width: 15%;
+      height: 100%;
+      padding-bottom: 50px;
+      z-index: 1;
+      img {
+        border-radius: 5px;
+        align-self: center;
+        height: 80%;
+        width: 95%;
+        object-fit: cover;
+      }
+
+      p {
+        z-index: 1;
+        align-self: center;
+        font-size: 25px;
+        padding: 10px;
+      }
+    }
   }
 
   // img {
