--- a/client/src/pages/About/About.scss
+++ b/client/src/pages/About/About.scss
@@ -15,7 +15,7 @@
 
   .split-in-2 {
     width: 100%;
-    height: 50%;
+    height: 45%;
   }
 
   .blur-area {
@@ -25,20 +25,24 @@
     box-shadow: inset 0 0 0 440px;
     border-radius: 20px;
     color: rgba(255, 255, 255, 0.35);
-    width: 46%;
-    height: 80%;
-    margin: 140px 20px;
+    width: 50%;
+    height: 75%;
+    margin-top: 140px;
+    margin-left: 25%;
+    margin-right: 25%;
     z-index: 0;
   }
 
   .about__article {
     position: fixed;
-    padding: 40px;
+    padding: 20px 50px;
     color: $dark-brown;
     overflow-x: wrap;
-    width: 45%;
+    width: 50%;
     height: 30%;
-    margin: 120px 20px;
+    margin-top: 140px;
+    margin-left: 25%;
+    margin-right: 25%;
     z-index: 1;
 
     h2 {
@@ -56,9 +60,8 @@
     display: flex;
     flex-flow: row;
     align-content: flex-end;
-    justify-content: flex-start;
+    justify-content: center;
     height: 100%;
-    padding-left: 30px;
     color: $dark-brown;
 
     .user-profile {
@@ -70,6 +73,7 @@
       height: 100%;
       padding-bottom: 50px;
       z-index: 1;
+
       img {
         border-radius: 5px;
         align-self: center;
