--- a/client/src/CartDrawer.scss
+++ b/client/src/CartDrawer.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100%;
+  height: 100vh;
   background: white;
   border-radius: 20px 0px;
   box-shadow: 2px 0 5px rgba(0, 0, 0, 0.5);
