--- a/client/src/components/Checkout.scss
+++ b/client/src/components/Checkout.scss
@@ -11,7 +11,7 @@
 }
 
 .checkout__container {
-  margin-top: 100px;
+  padding: 25px;
   width: 900px;
   height: 600px;
   border-radius: 20px;
@@ -19,8 +19,9 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 20px
+  // padding: 40px
 }
+
 
 .checkout__items {
   display: flex;
@@ -30,7 +31,28 @@
 
 .checkout__header {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+}
+
+.checkout__title {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  font-size: 50px;
+  font-weight: bold;
+}
+
+.checkout__close {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+
+}
+
+.checkout__close button {
+  background: none;
+  border: none;
+  font-size: 50px;
 }
 
 .checkout__body {
@@ -40,17 +62,49 @@
 
 .checkout__orderinfo__left {
   display: flex;
-  width: 600px;
-  flex-direction: space-between;
-  justify-content: center;
+  width: 500px;
   align-items: center;
+  justify-content: center;
   text-align: center;
   padding-right: 20px
+}
+
+.checkout__iteminfo__right {
+  border-left: 5px solid rgb(189, 188, 188);
+  padding-left: 20px;
+  display: -webkit-flex;
+  display: flex;
+  overflow: auto;
+}
+
+.checkout__items__title {
+  display: flex;
+  justify-content: center;
+}
+
+.checkout__guest button {
+  border-radius: 20px;
+  background-color: none;
 }
 
 
 .checkout__footer {
   display: flex;
   justify-content: center;
-  padding-top: 40px
+  padding-top: 25px
+}
+
+.checkout__footer button {
+  border-radius: 20px;
+  background-color: none;
+}
+
+.checkout__user {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.checkout__user p {
+  margin-bottom: 30px
 }
