--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -19,7 +19,9 @@ body {
   background-attachment: fixed;
   background-size: 100%;
   min-height: 100%;
+  min-width: 100%;
   color: $body-text;
+  font-family: $font-family-fancy;
 
   .nav-block {
     height: 100px;
@@ -48,9 +50,8 @@ body {
     left: 0;
     right: 0;
     bottom: 0;
-    position: absolute;
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
     background: inherit;
   }
 }
