--- a/client/src/pages/HomePage/Home.scss
+++ b/client/src/pages/HomePage/Home.scss
@@ -2,11 +2,11 @@
 @import '../../styles/reset.scss';
 
 .container__home {
-  display: flexbox;
+  display: relative;
+  width: 100%;
 }
 
 .section__home {
-  padding-top: 100px;
   font-size: 25px;
   width: 100%;
   display: flex;
