--- a/client/src/pages/Landing/Landing.scss
+++ b/client/src/pages/Landing/Landing.scss
@@ -17,6 +17,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   height: 100%;
+  width: 100%;
 
   .split-screen {
     display: flex;
