--- a/client/src/CartDrawerItem.scss
+++ b/client/src/CartDrawerItem.scss
@@ -1,18 +1,96 @@
 @import './styles/variables.scss';
 @import './styles/reset.scss';
 
-.cart__image {}
-
-.cartitem__buttons {
+.cart__item {
   display: flex;
-  margin-top: 10px;
+  flex-direction: row;
   justify-content: space-between;
-}
+  align-items: center;
+  width: 100%;
+  height: 100px;
 
-.cartitem__buttons-left {
-  display: flex;
-}
+  .cart-item__title {
+    width: 33%;
+    font-size: 22px;
+  }
 
-.cartitem__buttons-left p {
-  padding: 0px 10px
+  .cart-item__size {
+    font-size: 15px;
+    width: 20%;
+    text-align: center;
+  }
+
+  .cart__image {
+    display: flex;
+    flex-direction: column;
+    width: 25%;
+    font-size: 18px;
+
+    justify-content: center;
+    align-items: center;
+
+    img {
+      border-radius: 5px;
+      max-height: 60px;
+      min-height: 60px;
+      width: 90%;
+      object-fit: cover;
+    }
+  }
+
+  .cartitem__buttons {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    p {
+      font-size: 18px;
+      padding: 0 3px;
+    }
+  }
+
+  .cartitem__buttons-left {
+    display: flex;
+    font-size: 12px;
+  }
+
+  // .cartitem__buttons-left p {
+  //   padding: 0px 10px
+  // }
+
+  .plus {
+    background-color: $medium-brown;
+    font-weight: bold;
+    color: white;
+    border: none;
+    border-radius: 5px;
+
+    span {
+      padding: 0, 8px;
+    }
+  }
+
+  .minus {
+    background-color: $medium-brown;
+    font-weight: bold;
+    color: white;
+    border: none;
+    border-radius: 5px;
+  }
+
+  .minus-all {
+    background-color: transparent;
+    color: grey;
+    border: none;
+    font-size: 12px;
+  }
+
+  .cartitem__buttons-right {
+    font-size: 15px;
+    text-align: center;
+  }
+
+  .cartitem__buttons-container {
+    width: 25%;
+  }
 }
