change cat list to just be words, on brand

--- a/client/src/pages/HomePage/HomePageComponents/CategoryList.scss
+++ b/client/src/pages/HomePage/HomePageComponents/CategoryList.scss
@@ -5,7 +5,7 @@
 .category-list {
   display: inline-flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: space-between;
   position: absolute;
   margin-top: 200px;
   padding: 30px;
